I believe there is a problem with having dynamesh and multires on the object at the same time. #Blender consistent crash #60599

Closed
opened 2019-01-17 21:39:59 +01:00 by Magnus Dilling · 5 comments

System Information
Operating system: Windows 10 Home
Graphics card: nvidia 1070ti *2

Blender Version
Broken:
2.80, ad707115d5 , 2019-01-17, as found on the splash screen)

Short description of error
Blender crashes, and keep crashing when opening file where you have had the error

Exact steps for others to reproduce the error
It's easy to recreate the error from default startup.

  • Startup with sculpt workspace,
  • Uses dynamesh to fill a constant detail to object
  • Add multires modifiere to object, and add some subdivisions and preview them
  • Then start sculpting a bit, it either crash there or when you undo

I believe there is a problem with having dynamesh and multires on the object at the same time.

**System Information** Operating system: Windows 10 Home Graphics card: nvidia 1070ti *2 **Blender Version** Broken: 2.80, ad707115d5bc , 2019-01-17, as found on the splash screen) **Short description of error** Blender crashes, and keep crashing when opening file where you have had the error **Exact steps for others to reproduce the error** It's easy to recreate the error from default startup. - Startup with sculpt workspace, - Uses dynamesh to fill a constant detail to object - Add multires modifiere to object, and add some subdivisions and preview them - Then start sculpting a bit, it either crash there or when you undo I believe there is a problem with having dynamesh and multires on the object at the same time.
Author

Added subscriber: @MagnusDilling

Added subscriber: @MagnusDilling

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-01-28 14:56:43 +01:00

I actually just have to go into sculpt mode, enable dynatopo, add multires modifer, add subdivision and go back to object mode to trigger a segfault:

0x00005555581d63f8 in read_displacement_grid (r_tangent_D=0x7fffda7fae14, grid_v=1, grid_u=1, grid_size=5, displacement_grid=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_displacement_multires.c:128
128		if (displacement_grid->disps == NULL) {
(gdb) bt
#0  0x00005555581d63f8 in read_displacement_grid (r_tangent_D=0x7fffda7fae14, grid_v=1, grid_u=1, grid_size=5, displacement_grid=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_displacement_multires.c:128
#1  eval_displacement (displacement=0x7fffd802d078, ptex_face_index=0, u=0, v=0, dPdu=0x7fffda7faee4, dPdv=0x7fffda7faef0, r_D=0x7fffda7faefc)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_displacement_multires.c:384
#2  0x00005555581d7652 in BKE_subdiv_eval_displacement (subdiv=0x7fffd8040248, ptex_face_index=0, u=0, v=0, dPdu=0x7fffda7faee4, dPdv=0x7fffda7faef0,
    r_D=0x7fffda7faefc) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_eval.c:253
#3  0x00005555581de20f in subdiv_accumulate_vertex_normal_and_displacement (ctx=0x7fffda7fb280, ptex_face_index=0, u=0, v=0, subdiv_vert=0x7fffd80fb044)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_mesh.c:521
#4  0x00005555581de8c3 in subdiv_mesh_vertex_every_corner_or_edge (foreach_context=0x7fffda7fb200, UNUSED_tls=0x7fffd8028588, ptex_face_index=0, u=0, v=0,
    subdiv_vertex_index=3) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_mesh.c:671
#5  0x00005555581de90e in subdiv_mesh_vertex_every_corner (foreach_context=0x7fffda7fb200, tls=0x7fffd8028588, ptex_face_index=0, u=0, v=0,
    UNUSED_coarse_vertex_index=3, UNUSED_coarse_poly_index=0, UNUSED_coarse_corner=0, subdiv_vertex_index=3)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_mesh.c:685
#6  0x00005555581d88e1 in subdiv_foreach_corner_vertices_special_do (ctx=0x7fffda7fb140, tls=0x7fffd8028588, coarse_poly=0x7fffd701b028,
    vertex_corner=0x5555581de8c6 <subdiv_mesh_vertex_every_corner>, check_usage=false)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_foreach.c:416
#7  0x00005555581d8a0a in subdiv_foreach_every_corner_vertices_special (ctx=0x7fffda7fb140, tls=0x7fffd8028588, coarse_poly=0x7fffd701b028)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_foreach.c:465
#8  0x00005555581d8ab2 in subdiv_foreach_every_corner_vertices (ctx=0x7fffda7fb140, tls=0x7fffd8028588)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_foreach.c:486
#9  0x00005555581dca44 in subdiv_foreach_single_thread_tasks (ctx=0x7fffda7fb140)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_foreach.c:1973
#10 0x00005555581dcc7a in BKE_subdiv_foreach_subdiv_geometry (subdiv=0x7fffd8040248, context=0x7fffda7fb200, mesh_settings=0x7fffda7fb580,
    coarse_mesh=0x7fffd8011d08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_foreach.c:2039
#11 0x00005555581e007e in BKE_subdiv_to_mesh (subdiv=0x7fffd8040248, settings=0x7fffda7fb580, coarse_mesh=0x7fffd8011d08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_mesh.c:1254
#12 0x0000555557a2829c in multires_as_mesh (mmd=0x7fffe9faf708, ctx=0x7fffda7fb760, mesh=0x7fffd8011d08, subdiv=0x7fffd8040248)
    at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_multires.c:110
#13 0x0000555557a28530 in applyModifier (md=0x7fffe9faf708, ctx=0x7fffda7fb760, mesh=0x7fffd8011d08)
    at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_multires.c:178
#14 0x00005555580dad4b in modwrap_applyModifier (md=0x7fffe9faf708, ctx=0x7fffda7fb760, me=0x7fffd8011d08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/modifier.c:839
#15 0x0000555557f6bcd7 in mesh_calc_modifiers (depsgraph=0x7fffde518708, scene=0x7fffde47b008, ob=0x7fffde43da08, inputVertexCos=0x0, useDeform=1,
    need_mapping=false, dataMask=637534729, index=-1, useCache=true, build_shapekey_layers=false, r_deform=0x7fffde43df80, r_final=0x7fffde43df78)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:1454
#16 0x0000555557f6e44c in mesh_build_data (depsgraph=0x7fffde518708, scene=0x7fffde47b008, ob=0x7fffde43da08, dataMask=637534729,
    build_shapekey_layers=false, need_mapping=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2044
#17 0x0000555557f6e81e in makeDerivedMesh (depsgraph=0x7fffde518708, scene=0x7fffde47b008, ob=0x7fffde43da08, em=0x0, dataMask=637534729,
    build_shapekey_layers=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2160
#18 0x00005555581199dd in BKE_object_handle_data_update (depsgraph=0x7fffde518708, scene=0x7fffde47b008, ob=0x7fffde43da08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:204
#19 0x000055555811a2ed in BKE_object_eval_uber_data (depsgraph=0x7fffde518708, scene=0x7fffde47b008, ob=0x7fffde43da08)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:376
I actually just have to go into sculpt mode, enable dynatopo, add multires modifer, add subdivision and go back to object mode to trigger a segfault: ``` 0x00005555581d63f8 in read_displacement_grid (r_tangent_D=0x7fffda7fae14, grid_v=1, grid_u=1, grid_size=5, displacement_grid=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_displacement_multires.c:128 128 if (displacement_grid->disps == NULL) { (gdb) bt #0 0x00005555581d63f8 in read_displacement_grid (r_tangent_D=0x7fffda7fae14, grid_v=1, grid_u=1, grid_size=5, displacement_grid=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_displacement_multires.c:128 #1 eval_displacement (displacement=0x7fffd802d078, ptex_face_index=0, u=0, v=0, dPdu=0x7fffda7faee4, dPdv=0x7fffda7faef0, r_D=0x7fffda7faefc) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_displacement_multires.c:384 #2 0x00005555581d7652 in BKE_subdiv_eval_displacement (subdiv=0x7fffd8040248, ptex_face_index=0, u=0, v=0, dPdu=0x7fffda7faee4, dPdv=0x7fffda7faef0, r_D=0x7fffda7faefc) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_eval.c:253 #3 0x00005555581de20f in subdiv_accumulate_vertex_normal_and_displacement (ctx=0x7fffda7fb280, ptex_face_index=0, u=0, v=0, subdiv_vert=0x7fffd80fb044) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_mesh.c:521 #4 0x00005555581de8c3 in subdiv_mesh_vertex_every_corner_or_edge (foreach_context=0x7fffda7fb200, UNUSED_tls=0x7fffd8028588, ptex_face_index=0, u=0, v=0, subdiv_vertex_index=3) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_mesh.c:671 #5 0x00005555581de90e in subdiv_mesh_vertex_every_corner (foreach_context=0x7fffda7fb200, tls=0x7fffd8028588, ptex_face_index=0, u=0, v=0, UNUSED_coarse_vertex_index=3, UNUSED_coarse_poly_index=0, UNUSED_coarse_corner=0, subdiv_vertex_index=3) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_mesh.c:685 #6 0x00005555581d88e1 in subdiv_foreach_corner_vertices_special_do (ctx=0x7fffda7fb140, tls=0x7fffd8028588, coarse_poly=0x7fffd701b028, vertex_corner=0x5555581de8c6 <subdiv_mesh_vertex_every_corner>, check_usage=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_foreach.c:416 #7 0x00005555581d8a0a in subdiv_foreach_every_corner_vertices_special (ctx=0x7fffda7fb140, tls=0x7fffd8028588, coarse_poly=0x7fffd701b028) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_foreach.c:465 #8 0x00005555581d8ab2 in subdiv_foreach_every_corner_vertices (ctx=0x7fffda7fb140, tls=0x7fffd8028588) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_foreach.c:486 #9 0x00005555581dca44 in subdiv_foreach_single_thread_tasks (ctx=0x7fffda7fb140) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_foreach.c:1973 #10 0x00005555581dcc7a in BKE_subdiv_foreach_subdiv_geometry (subdiv=0x7fffd8040248, context=0x7fffda7fb200, mesh_settings=0x7fffda7fb580, coarse_mesh=0x7fffd8011d08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_foreach.c:2039 #11 0x00005555581e007e in BKE_subdiv_to_mesh (subdiv=0x7fffd8040248, settings=0x7fffda7fb580, coarse_mesh=0x7fffd8011d08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/subdiv_mesh.c:1254 #12 0x0000555557a2829c in multires_as_mesh (mmd=0x7fffe9faf708, ctx=0x7fffda7fb760, mesh=0x7fffd8011d08, subdiv=0x7fffd8040248) at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_multires.c:110 #13 0x0000555557a28530 in applyModifier (md=0x7fffe9faf708, ctx=0x7fffda7fb760, mesh=0x7fffd8011d08) at /home/zed/programmering/blender_master/blender/source/blender/modifiers/intern/MOD_multires.c:178 #14 0x00005555580dad4b in modwrap_applyModifier (md=0x7fffe9faf708, ctx=0x7fffda7fb760, me=0x7fffd8011d08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/modifier.c:839 #15 0x0000555557f6bcd7 in mesh_calc_modifiers (depsgraph=0x7fffde518708, scene=0x7fffde47b008, ob=0x7fffde43da08, inputVertexCos=0x0, useDeform=1, need_mapping=false, dataMask=637534729, index=-1, useCache=true, build_shapekey_layers=false, r_deform=0x7fffde43df80, r_final=0x7fffde43df78) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:1454 #16 0x0000555557f6e44c in mesh_build_data (depsgraph=0x7fffde518708, scene=0x7fffde47b008, ob=0x7fffde43da08, dataMask=637534729, build_shapekey_layers=false, need_mapping=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2044 #17 0x0000555557f6e81e in makeDerivedMesh (depsgraph=0x7fffde518708, scene=0x7fffde47b008, ob=0x7fffde43da08, em=0x0, dataMask=637534729, build_shapekey_layers=false) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/DerivedMesh.c:2160 #18 0x00005555581199dd in BKE_object_handle_data_update (depsgraph=0x7fffde518708, scene=0x7fffde47b008, ob=0x7fffde43da08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:204 #19 0x000055555811a2ed in BKE_object_eval_uber_data (depsgraph=0x7fffde518708, scene=0x7fffde47b008, ob=0x7fffde43da08) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/object_update.c:376 ```

This issue was referenced by a8c0a57fc3

This issue was referenced by a8c0a57fc3eb0f8c3aeeb2de083a0e06b06cef7e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60599
No description provided.