Fix T60599: Multires crash after doing dyntopo sculpt